dont return icon data as base64 encoded string
