# docs/swagger.json
@@ -1347,11 +1347,7 @@
                     "description": {
                         "type": "string"
                     },
-                    "icon": {
-                        "format": "byte",
-                        "type": "string"
-                    },
-                    "icon_mime_type": {
+                    "icon_url": {
                         "type": "string"
                     },
                     "id": {
